<resources>
    <string name="app_name">My Wallet</string>
    <string name="title_home">Home</string>
    <string name="title_id">IDs</string>
    <string name="title_cards">Bank Cards</string>
    <string name="title_loyalty">Loyalty Cards</string>
    <string name="title_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="home_subtitle">Recent Cards</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
